Fix inaccessible scrollbar bug

--- a/src/styl/imports/sidebar.styl
+++ b/src/styl/imports/sidebar.styl
@@ -139,6 +139,7 @@ section.sidebar
 					padding 5px 0 5px 34px
 					font-size 14px
 					letter-spacing 0.5px
+					border 3px solid transparent
 
 					&.level2
 						margin-left 0px
@@ -218,6 +219,7 @@ section.sidebar
 				display inline-flex
 				height 100%
 				color inherit
+				border 3px solid transparent
 
 				svg
 					height 15px
