--- a/src/styl/index.styl
+++ b/src/styl/index.styl
@@ -15,6 +15,7 @@ section.main
 	canvas
 		position fixed
 		opacity 0.5
+		pointer-events none
 
 	#ui-view
 		max-width 1000px
